# MapacheSPIM

./: .gitignore  .gitmodules  ARM_PLAN.md  CONSOLE_GUIDE.md  MIGRATION_PLAN.md  PROFESSIONALIZATION_PLAN.md  PROGRESS.md  README.md  TEST_COVERAGE_ANALYSIS.md  TODO.md  mapachesail_console  pyproject.toml  setup.py  test_console_advanced.txt  test_console_script.txt
.github/workflows/: ci.yml
backends/: README.md
backends/arm/: CLEANUP_BUG_ANALYSIS.md  Makefile  SAIL_SOURCE_MAP.md  build.sh  test_arm_minimal.S  test_arm_sail.c
docs/: README.md
docs/design/: enhancement-history.md  implementation-plan.md  spim-comparison.md
docs/developer/: architecture.md  multi-isa.md  testing.md
docs/history/: PROFESSIONALIZATION_PLAN.md  RENAME_PLAN.md  progress-log.md
docs/user/: console-guide.md  quick-start.md  syscalls.md
examples/: Makefile  README.md  linker.ld
examples/arm/: Makefile  README.md  linker.ld
examples/arm/array_stats/: array_stats  array_stats.s
examples/arm/fibonacci/: fibonacci  fibonacci.s
examples/arm/guess_game/: guess_game  guess_game.s
examples/arm/hello_asm/: hello_asm  hello_asm.s
examples/arm/hello_world/: hello  hello.s
examples/arm/matrix_multiply/: matrix_mult  matrix_mult.s
examples/arm/test_simple/: simple  simple.s
examples/matrix_multiply/: matrix_mult.s
examples/mips/: Makefile  linker.ld
examples/mips/array_stats/: array_stats  array_stats.s
examples/mips/fibonacci/: fibonacci  fibonacci.s
examples/mips/guess_game/: guess_game  guess_game.s
examples/mips/hello_asm/: hello_asm  hello_asm.s
examples/mips/matrix_multiply/: matrix_mult  matrix_mult.s
examples/riscv/: Makefile
examples/riscv/array_stats/: Makefile  array_stats  array_stats.s
examples/riscv/fibonacci/: fibonacci  fibonacci.s  fibonacci_debug
examples/riscv/guess_game/: Makefile  guess_game  guess_game.s
examples/riscv/hello_asm/: Makefile  hello_asm  hello_asm.s
examples/riscv/hello_world/: hello  hello.s
examples/riscv/matrix_multiply/: matrix_mult  matrix_mult.s
examples/riscv/test_simple/: EXPECTED_BEHAVIOR.md  simple
examples/test_simple/: Makefile  simple.s
examples/x86_64/: Makefile  linker.ld
examples/x86_64/array_stats/: array_stats  array_stats.s
examples/x86_64/fibonacci/: fibonacci  fibonacci.S
examples/x86_64/guess_game/: guess_game  guess_game.s
examples/x86_64/hello_asm/: hello_asm  hello_asm.s
examples/x86_64/matrix_multiply/: matrix_mult  matrix_mult.S
examples/x86_64/test_simple/: simple.S
lib/: CMakeLists.txt  Makefile  test_arm_basic.c
lib/include/: sailsim.h
lib/src/: sailsim.cpp  sailsim_arm.cpp  sailsim_riscv.cpp  test_sailsim.c
libsailsim/: CMakeLists.txt  STATUS.md  sailsim.cpp  sailsim.h
mapachesail/: README.md  __init__.py  console.py  sail_backend.py
mapachespim/: README.md  __init__.py  console.py  elf_loader.py  sail_backend.py  unicorn_backend.py
mapachespim/toolchain/: __init__.py  assembler.py  cli.py  directives.py  dwarf.py  elf_builder.py  memory_map.py
spec/: IMPLEMENTATION_PLAN.md  original_console.py  original_user_guide.rst
tests/: README.md  __init__.py  run_arm_example.py  test_arm_correctness.py  test_arm_debug.py  test_arm_decode.py  test_arm_elf_load.py  test_arm_import_isa.py  test_arm_minimal.py  test_arm_separate_fn.py  test_arm_structure.py  test_assembler_accuracy.py  test_console_commands.py  test_console_disasm.py  test_console_working.py  test_cross_isa_regression.py  test_debug_info.py  test_disasm.py  test_disasm_comprehensive.py  test_e2e_all_isas.py  test_elf_loading.py  test_forward_references.py  test_io_syscalls.py  test_isa_specification.py  test_mips_backend.py  test_multi_isa.py  test_program_correctness.py  test_python_bindings.py  test_run_completion.py  test_simple_basic.py  test_simulator.py  test_symbols.py  test_toolchain.py  test_x86_backend.py
tests/fixtures/: debug_test  debug_test.c  hello_world  hello_world.s  riscv.ld  test_simple  test_simple.s
